--- a/static/styles.css
+++ b/static/styles.css
@@ -1,15 +1,24 @@
+
+
+
+#title{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 50%;
+    width: 40%;
     margin-left: auto;
     margin-right: auto;
   }
   
   td, th {
-    border: 1px solid #000000;
+
+    border: 1px solid #ffffff;
     text-align: left;
-    padding: 5px;
+    padding: 10px;
   }
   
   tr:nth-child(even) {
