--- a/static/styles.css
+++ b/static/styles.css
@@ -6,6 +6,10 @@
   margin-right: auto;
 }
 
+#home_button{
+  margin-right: auto;
+}
+
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
