--- a/templates/contents.html
+++ b/templates/contents.html
@@ -12,6 +12,11 @@
             POGGERS
         </h1>
     </div>
+    <div id = "contents_button">
+        <a href = "{{ url_for('home')}}">
+            <button id = "home_button" type = "button" href = "home"> Pogchamps </button> 
+        </a>
+    </div>
     <table>
         <tr>
             <th>Pogface</th>
