added sort by name button

--- a/templates/contentbyname.html
+++ b/templates/contentbyname.html
@@ -21,8 +21,8 @@
         <tr>
             <th>
                 <div id = "sortnamea_button">
-                    <a href = "{{ url_for('pogfaces_namea')}}">
-                        <button id = "sortnamea_button" type = "button" href = "pogfaces_namea"> Pogface </button> 
+                    <a href = "{{ url_for('pogfaces_namez')}}">
+                        <button id = "sortnamea_button" type = "button" href = "pogfaces_namez"> Pogface </button> 
                     </a>
                 </div>
             </th>
