--- a/templates/contentbynamez.html
+++ b/templates/contentbynamez.html
@@ -20,9 +20,9 @@
     <table>
         <tr>
             <th>
-                <div id = "sortnamea_button">
-                    <a href = "{{ url_for('pogfaces_namea')}}">
-                        <button id = "sortnamea_button" type = "button" href = "pogfaces_namea"> Pogface </button> 
+                <div id = "sortnamez_button">
+                    <a href = "{{ url_for('contents')}}">
+                        <button id = "sortnamez_button" type = "button" href = "contents"> Pogface </button> 
                     </a>
                 </div>
             </th>
