Added some colour and aesthetics

--- a/templates/contentbynamez.html
+++ b/templates/contentbynamez.html
@@ -17,12 +17,13 @@
             <button id = "home_button" type = "button" href = "home"> Home </button> 
         </a>
     </div>
+    <br>
     <table>
         <tr>
             <th>
-                <div id = "sortnamez_button">
+                <div id = "sortnamea_button">
                     <a href = "{{ url_for('contents')}}">
-                        <button id = "sortnamez_button" type = "button" href = "contents"> Pogface </button> 
+                        <button id = "sortnamea_button" type = "button" href = "contents"> Pogface </button> 
                     </a>
                 </div>
             </th>
