--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
     </div>
     <div id = "contents_button">
         <a href = "{{ url_for('contents')}}">
-            <button id = "content_button" type = "button" href = "contents"> Pogchamps </button> 
+            <button id = "contents_button" type = "button" href = "contents"> Pogchamps </button> 
         </a>
     </div>
 </body>
