Nav Bar, Button Placement better

--- a/static/home_styles.css
+++ b/static/home_styles.css
@@ -1,6 +1,6 @@
 #title{
-  background-color: green;
-  padding-left: 46%;
+  background-color: #c6b3d0;
+  padding-left: 45.55%;
   font-family: 'Comic Sans', 'Comic Sans MS', cursive;
   }
   
@@ -11,5 +11,5 @@
 }
 
 body{
-  background-color: indigo;
+  background-color:#383838;
 }
