--- a/templates/home.html
+++ b/templates/home.html
@@ -12,9 +12,12 @@
             POGGERS
         </h1>
     </div>
-    <div id = "contents_button">
-        <a href = "{{ url_for('contents')}}">
-            <button id = "contents_button" type = "button" href = "contents"> Pogchamps </button> 
-        </a>
+    <div id = "nav_bar">
+        <div id = "contents_button">
+            <a href = "{{ url_for('contents')}}">
+                <button id = "contents_button" type = "button" href = "contents"> Pogchamps </button> 
+            </a>
+        </div>
     </div>
+    <img id= "pogchamp" src="/static/images/Pogchamp.png" alt="Poggchamp">
 </body>
