--- a/static/styles.css
+++ b/static/styles.css
@@ -50,6 +50,11 @@ table {
     margin-right: auto;
     font-size: large;
   }
+
+  table, img{
+    width: 50px;
+    padding: 0px;
+  }
   
   td, th {
 
@@ -57,6 +62,7 @@ table {
     text-align: left;
     padding: 20px;
   }
+
   
   tr:nth-child(even) {
     background-color: #9059f6;
@@ -65,7 +71,7 @@ table {
   tr:nth-child(odd) {
     background-color: #694ea8;
   }
-  
+
   h2 {
     margin-left: auto;
     margin-right: auto;
