--- a/templates/contentbyname.html
+++ b/templates/contentbyname.html
@@ -29,6 +29,7 @@
     <br>
     <table>
         <tr>
+            <th></th>
             <th>Pogfaces</th>
             <th>Gender</th>
             <th>Face Type</th>
@@ -36,6 +37,7 @@
         </tr>
         {% for item in results %}
         <tr>
+            <td><img src="/static/images/{{item[4]}}" alt="image"></td>
             <td>{{ item[0]}}</td>
             <td>{{ item[1]}}</td>
             <td>{{ item[2]}}</td>
