--- a/templates/contents.html
+++ b/templates/contents.html
@@ -39,6 +39,7 @@
     <br>
     <table>
         <tr>
+            <th></th>
             <th>Pogfaces</th>
             <th>Gender</th>
             <th>Face Type</th>
@@ -46,10 +47,11 @@
         </tr>
         {% for item in results %}
         <tr>
+            <td><img src="/static/images/{{item[4]}}" alt="image"></td>
             <td>{{ item[0]}}</td>
             <td>{{ item[1]}}</td>
             <td>{{ item[2]}}</td>
-            <td>{{ item[3]}}</td>
+            <td id = "date">{{ item[3]}}</td>
         </tr>
         {%endfor%}
     </table>
