Home Page Aesthetics

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,17 +7,42 @@
     <title>Home</title>
 </head>
 <body>
-    <div id = "title">
-        <h1>
-            POGGERS
-        </h1>
-    </div>
-    <div id = "nav_bar">
-        <div id = "contents_button">
-            <a href = "{{ url_for('contents')}}">
-                <button id = "contents_button" type = "button" href = "contents"> Pogchamps </button> 
+    <div id="page">
+        <div id = "scrollface" width="40%" >
+            <marquee  behavior="scroll" direction="up" height="933px" width="49%" id = "test">
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/Pogchamp.png" width = "100%" alt="pp">
+                </a>
+            </marquee>
+            <marquee truespeed="truespeed" scrolldelay="-1" behavior="scroll" direction="up" height="933px" width="49%" id = "test">
+                <a href = "{{ url_for('pogfaces_namea')}}">
+                    <img src="/static/images/Pogchamp.png" width = "100%" alt="pp">
+                </a>
+            </marquee>
+        </div>
+        <div id="heading">
+            <div id = "title">
+                <h1>
+                    POGGERS
+                </h1>
+            </div>
+            <div id = "nav_bar">
+                <div id = "contents_button">
+                    <a href = "{{ url_for('contents')}}">
+                        <button id = "contents_button" type = "button" href = "contents"> Pogchamps </button> 
+                    </a>
+                </div>
+            </div>
+            <br><br><br><br><br><br>
+            <h2 id=maintext>
+                The Repository For Pogchamps
+            </h2>
+            <h3 id=subtext>
+                Discover many facts and the history of Pogchamps. This website is dedicated to giving you all the information about Pogchamps for free.
+            </h3>
+            <a href = "{{ url_for('contents')}}" >
+                <button id = "contentbut" type = "button" href = "contents"> Visit The Repository </button> 
             </a>
         </div>
     </div>
-    <img id= "pogchamp" src="/static/images/Pogchamp.png" alt="Poggchamp">
 </body>
