--- a/static/home_styles.css
+++ b/static/home_styles.css
@@ -4,16 +4,24 @@
   background-color:  #a17cb8;
   color: #ecebe1;
   text-align: center;
-  padding: 15px;
   letter-spacing: 75px;
   background-image: url(/static/images/Pogchamp.png);
   background-size: 60px;
+  width: 100%;
+  height: 50px;
+  margin-top:0 ;
 }
   
 #nav_bar{
   background-color: #c6b3d0;
   height: 50px;
+  width: 100%;
 }
+
+#page{
+  float: left;
+}
+
 
 #contents_button{
   font-family: 'Comic Sans', 'Comic Sans MS', cursive;
@@ -58,4 +66,48 @@ body{
 #cop{
   width: 100%;
   height: 260px;
+}
+
+#scrollface {
+  width: 40%;
+  position: absolute;
+}
+
+#heading {
+  float: right;
+  margin-top:0px;
+  width: 60%;
+}
+
+#maintext{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 70px;
+  width: 700px;
+}
+
+#subtext{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  width: 800px;
+}
+
+#contentbut{
+  border-radius: 15px;
+  background-color: #c6b3d0; 
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  height: 50px;
+  width: 300px;
+}
+
+#contentbut:hover{
+  background-color: #a17cb8;
+  cursor: pointer;
+  transition-duration: 0.4s;
 }
