--- a/static/home_styles.css
+++ b/static/home_styles.css
@@ -69,8 +69,10 @@ body{
 }
 
 #scrollface {
-  width: 40%;
+  width: 35%;
   position: absolute;
+  overflow: auto;
+  height: 100%;
 }
 
 #heading {
@@ -81,8 +83,8 @@ body{
 
 #maintext{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 70px;
-  width: 700px;
+  font-size: 500%;
+  width: 60%;
 }
 
 #subtext{
@@ -104,10 +106,47 @@ body{
   font-weight: bold;
   height: 50px;
   width: 300px;
+  transition-duration: 0.7s;
 }
 
-#contentbut:hover{
+#contentbut:hover {
   background-color: #a17cb8;
   cursor: pointer;
   transition-duration: 0.4s;
+}
+
+.row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  -ms-flex: 50%; /* IE10 */
+  flex: 50%;
+  max-width: 50%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
+  }
+}
+
+* {
+  box-sizing: border-box;
 }
