--- a/static/styles.css
+++ b/static/styles.css
@@ -68,8 +68,11 @@ table {
     border-width: 4px; 
   }
 
-
-
+  tr:focus-within {
+    background: #f2f3ff;
+    outline: none;
+  }
+  
   #poop:hover{
     background-color: #694ea8;
     cursor: pointer;
