--- a/templates/home.html
+++ b/templates/home.html
@@ -8,40 +8,109 @@
 </head>
 <body>
     <div id="page" >
-        <div id = "scrollface">
-            <div class="row"> 
-                <div class="column">
-                  <img src="/static/images/Pogchamp.png" style="width:100%">
-                  <img src="/static/images/Pogchamp.png" style="width:100%">
-                  <img src="/static/images/Pogchamp.png" style="width:100%">
-                  <img src="/static/images/Pogchamp.png" style="width:100%">
-                  <img src="/static/images/Pogchamp.png" style="width:100%">
-                  <img src="/static/images/Pogchamp.png" style="width:100%">
-                </div>
-                <div class="column">
-                  <img src="/static/images/Pogchamp.png" style="width:100%">
-                  <img src="/static/images/Pogchamp.png" style="width:100%">
-                  <img src="/static/images/Pogchamp.png" style="width:100%">
-                  <img src="/static/images/Pogchamp.png" style="width:100%">
-                  <img src="/static/images/Pogchamp.png" style="width:100%">
-                  <img src="/static/images/Pogchamp.png" style="width:100%">
-                </div> 
-              </div>
+        <div id = "scrollface" width="40%" >
+            <marquee  scrollamount = "15" behavior="scroll" direction="up" height="933px" width="49%" id = "test" onmouseover="this.stop();" onmouseout="this.start();">
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/14.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/4.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/8.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/9.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/15.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/16.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/26.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/27.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/28.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/32.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/33.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/35.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/36.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+            </marquee>
+            <marquee scrollamount = "10" behavior="scroll" direction="up" height="933px" width="49%" id = "test" onmouseover="this.stop();" onmouseout="this.start();">
+                <a href = "{{ url_for('pogfaces_namea')}}">
+                    <img src="/static/images/10.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/11.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/12.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/13.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/18.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/19.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/20.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/21.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/22.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/23.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/24.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/25.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/29.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/30.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+                <a href = "{{ url_for('contents')}}">
+                    <img src="/static/images/31.jpg" width = "100%" alt="pp" class = "buds">
+                </a>
+            </marquee>
         </div>
         <div id="heading">
-            <div id = "title">
-                <h1>
-                    POGGERS
-                </h1>
-            </div>
-            <div id = "nav_bar">
-                <div id = "contents_button">
-                    <a href = "{{ url_for('contents')}}">
-                        <button id = "contents_button" type = "button" href = "contents"> Pogchamps </button> 
-                    </a>
-                </div>
-            </div>
-            <br><br><br><br><br><br>
+            <div id = "menu">
+                <a href = "{{ url_for('contents')}}" >
+                    <button id = "menubut" type = "button" href = "contents"> About </button> 
+                </a>
+                <a href = "{{ url_for('contents')}}" >
+                    <button id = "menubut" type = "button" href = "contents"> Placeholder </button> 
+                </a>
+                <a href = "{{ url_for('contents')}}" >
+                    <button id = "menubut" type = "button" href = "contents"> Contact </button> 
+                </a>
+            </div>           
+            <br><br><br><br><br>
             <div id=hometext>
                 <h2 id=maintext>
                     The Repository For Pogchamps
