--- a/static/home_styles.css
+++ b/static/home_styles.css
@@ -20,6 +20,7 @@
 
 #page{
   float: left;
+  height: 100%;
 }
 
 
@@ -34,6 +35,7 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  outline: none;
 }
 
 #contents_button:hover{
@@ -73,6 +75,7 @@ body{
   position: absolute;
   overflow: auto;
   height: 100%;
+  background-image: linear-gradient(to right, #5c5c5c, #383838);
 }
 
 #heading {
@@ -85,16 +88,18 @@ body{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 500%;
   width: 60%;
+  color: #a17cb8;
 }
 
 #subtext{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 30px;
   width: 800px;
+  color: #a17cb8;
 }
 
 #contentbut{
-  border-radius: 15px;
+  border-radius: 50px;
   background-color: #c6b3d0; 
   border: none;
   color: white;
@@ -107,46 +112,60 @@ body{
   height: 50px;
   width: 300px;
   transition-duration: 0.7s;
+  outline: none;
 }
 
 #contentbut:hover {
   background-color: #a17cb8;
   cursor: pointer;
   transition-duration: 0.4s;
+  width: 350px;
 }
 
-.row {
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
-  padding: 0 4px;
+.buds{
+  height: 200px;
+  width: 200px;
+  padding: 100px;
+  transition: 0.4s;
+  
 }
 
-/* Create four equal columns that sits next to each other */
-.column {
-  -ms-flex: 50%; /* IE10 */
-  flex: 50%;
-  max-width: 50%;
-  padding: 0 4px;
-}
-
-.column img {
-  margin-top: 8px;
-  vertical-align: middle;
-  width: 100%;
+.buds:hover{
+  height: 250px;
+  width: 250px;
+  padding: 50px;
+  transition: 0.7s;
 }
 
 
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    -ms-flex: 100%;
-    flex: 100%;
-    max-width: 100%;
-  }
+#menubut{
+  background: none;
+  border: none;
+  color: white;
+  border-color: #a17cb8;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  height: 40px;
+  width: 150px;
+  transition-duration: 0.3s;
+  outline: none;
+  margin-top: 5%;
+  margin-left: 0.5%;
+  margin-right: 0.5%;
+  border-bottom-style: solid;
+  float: left;
 }
 
-* {
-  box-sizing: border-box;
+#menubut:hover {
+  background-color: #a17cb8;
+  cursor: pointer;
+  transition-duration: 0.4s;
+  width: 180px;
+  border-radius: 2px;
+  color: white;
+  border-bottom: none;
 }
